--- a/src/Pages/stall-details/stall-details.css
+++ b/src/Pages/stall-details/stall-details.css
@@ -6,8 +6,9 @@
     top: 0;
     left: 0;
     width: 100%;
+    /* height: 100%; */
     z-index: 10000;
-    background-color: aliceblue;
+    background-color: white;
 }
 
 .stall-details-btn {
