minor changes - tidy up

--- a/src/Pages/stall-details/stall-details.css
+++ b/src/Pages/stall-details/stall-details.css
@@ -70,8 +70,8 @@
 }
 
 .line-separator {
-    width: 90%;
-    margin: 0.8rem 0;
+    width: 100%;
+    margin: 1rem auto;
     border-bottom: 1px solid var(--main-dark-color);
 }
 
@@ -93,7 +93,7 @@
 }
 
 .stall-time-container {
-    width: 70%;
+    width: 15rem;
     display: flex;
     justify-content: space-between;
 }
