--- a/src/components/filters/filters.css
+++ b/src/components/filters/filters.css
@@ -1,9 +1,28 @@
 .filters-container {
+    position: relative;
     width: 100%;
     background-color: var(--main-light-color);
     padding: 1rem;
     font-size: 0.8rem;
     color: var(--text-color)
+}
+
+.filters-container h3 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0.5rem;
+}
+
+.close {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    width: 1.4rem;
+    height: 1.4rem;
+    padding: 0.4rem;
+    border-radius: 50%;
+    background-color: rgba(45, 45, 45, 0.7);
+    color: rgb(255, 255, 255);
 }
 
 .filter {
@@ -16,7 +35,7 @@
 }
 
 .separator-line {
-    width: 90%;
+    width: 100%;
     border-bottom: 1px solid var(--main-dark-color);
     margin: 1rem auto 1rem auto;
 }
