--- a/src/components/stall-preview/stall-preview.css
+++ b/src/components/stall-preview/stall-preview.css
@@ -31,6 +31,12 @@
     text-align: center;
 }
 
+.info-image {
+    height: 100%;
+    width: 150px;
+    object-fit: cover;
+}
+
 .info-status {
     color:green;
     font-weight: bold;
