--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Podkova:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
+
 :root {
   --main-dark-color: #00801C;
   --main-light-color: #C2FFB2;
   --text-color: rgb(29,29,29);
+  font-family: 'Poppins', Verdana, sans-serif;
 
 }
 
@@ -26,7 +29,7 @@
 }
 
 .border-light {
-  border: 1px solid var(--main-light-color);
+  border: 2px solid var(--main-light-color);
 }
 
 input:focus {
