--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -3,3 +3,14 @@
     height: 100%;
   }
   
+.autocomplete {
+  position: fixed;
+  top: 50%;
+  left: 40px;
+}
+
+.standalone {
+  position: fixed;
+  top: 30%;
+  left: 40px;
+}
