--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -3,6 +3,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .home-background {
@@ -36,9 +37,9 @@
 }
 
 .home-search-input {
-    width: 80%;
+    width: 250px;
     height: 30px;
-    margin: 2rem auto 1rem;
+    margin: 2rem 0 1rem;
     padding: 1.1rem;
     background-color: white;
     border-radius: 10px;
@@ -49,7 +50,6 @@
 
 .home-search-input::placeholder {
     color: var(--main-dark-color);
-
 }
 
 .home-search-btn {
