--- a/src/Pages/stall-details/stall-details.css
+++ b/src/Pages/stall-details/stall-details.css
@@ -25,6 +25,8 @@
     position: absolute;
     top: 10px;
     left: 10px;
+     /* remove styling applied by using <Link/>  */
+    border: none;
 }
 
 .fav-btn {
@@ -48,10 +50,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 0.5rem;
 }
 
 .stall-name {
     font-size: 1.2rem;
+    font-weight: 600;
 }
 
 .stall-status {
