--- a/src/components/results-nav/results-nav.css
+++ b/src/components/results-nav/results-nav.css
@@ -17,8 +17,10 @@
     font-size: 0.8rem;
     font-weight: bold;
     color: var(--main-dark-color);
+    background-color: white;
     line-height: 1;
     box-shadow: 0px 3px 5px rgb(58, 58, 58);
+    text-decoration: none;
 }
 
 .nav-btn-selected {
