--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -41,7 +41,7 @@
 
 .circle-btn {
     height: 30px;
-    width: 30px;
+    min-width: 30px;
     border-radius: 50%;
     display: flex;
     align-items: center;
