--- a/src/Pages/stall-details-form/stall-details-form.css
+++ b/src/Pages/stall-details-form/stall-details-form.css
@@ -81,3 +81,26 @@ textarea:focus {
     padding: 0 1rem;
     background-color: white
 }
+
+.form-submit-btn {
+    padding: 0.5rem 2rem;
+    border-radius: 20px;
+    border: none;
+    font-size: 0.8rem;
+    font-weight: bold;
+    background-color: var(--main-dark-color);
+    color: var(--main-light-color);
+    line-height: 1;
+    box-shadow: 0px 3px 5px rgb(58, 58, 58);
+    text-decoration: none;
+    cursor: pointer;  
+}
+
+.add-photo-btn {
+    margin: 1rem 0.5rem;
+    border: 1px solid var(--main-dark-color);
+    background-color: white;
+    color:  rgb(77, 77, 77);
+    border-radius: 15px;
+    padding: 0.2rem 1rem;
+}
