--- a/src/components/results-list/results-list.css
+++ b/src/components/results-list/results-list.css
@@ -16,7 +16,7 @@
     align-items: center;
     width: 100%;
     height: 150px;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     margin: 0.5rem 0;
     padding: 0.6rem;
     box-shadow: 0 0 5px rgb(204, 203, 203);
