--- a/src/components/update-item-modal/update-item-modal.css
+++ b/src/components/update-item-modal/update-item-modal.css
@@ -11,10 +11,62 @@
 }
 
 .update-item-modal-content {
-    background-color: white;
-    padding: 1rem;
-    border-radius: 1rem;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem
+    gap: 0.5rem;
+    padding: 1.5rem;
+    background-color: white;
+    border-radius: 1rem;
+}
+
+.update-item-modal-content h5 {
+    margin: 0 auto 0.5rem;
+    font-size: 1rem;
+
+}
+
+.update-item-input-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 95%;
+    gap: 0.5rem;
+    /* more padding on top - space for label */
+    padding: 10px 10px 10px;
+    margin-bottom: 1rem;
+    border: 1px solid var(--main-dark-color);
+    border-radius: 10px; 
+}
+
+.update-item-input-container .text-input {
+    width: 100%;
+    border: none;
+    font-family: inherit;
+}
+
+.update-item-input-container label {
+    /* shift labels up so they sit over the input border */
+    position: absolute;
+    top: -12px;
+    left: 12px;
+    padding: 3px;
+    background-color: white;
+    color:  rgb(77, 77, 77);
+    font-size: 0.8rem;
+}
+
+.item-update-btn {
+    padding: 0.5rem 2rem;
+    margin: auto;
+    border-radius: 20px;
+    border: none;
+    font-size: 0.8rem;
+    font-weight: bold;
+    background-color: var(--main-dark-color);
+    color: var(--main-light-color);
+    line-height: 1;
+    box-shadow: 0px 3px 5px rgb(58, 58, 58);
+    text-decoration: none;
+    cursor: pointer;  
 }
