--- a/src/components/update-item-modal/update-item-modal.css
+++ b/src/components/update-item-modal/update-item-modal.css
@@ -14,7 +14,6 @@
     width: 80%;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
     padding: 1.5rem;
     background-color: white;
     border-radius: 1rem;
@@ -22,8 +21,7 @@
 
 .update-item-modal-content h5 {
     margin: 0 auto 0.5rem;
-    font-size: 1rem;
-
+    font-size: 1.2rem;
 }
 
 .update-item-input-container {
@@ -31,10 +29,9 @@
     display: flex;
     align-items: center;
     width: 95%;
-    gap: 0.5rem;
     /* more padding on top - space for label */
-    padding: 10px 10px 10px;
-    margin-bottom: 1rem;
+    padding: 12px 10px 10px;
+    margin: 1rem 0;
     border: 1px solid var(--main-dark-color);
     border-radius: 10px; 
 }
@@ -56,8 +53,20 @@
     font-size: 0.8rem;
 }
 
+.item-update-error {
+    font-size: 0.8rem;
+    color: red;
+    font-style: italic;
+    margin: 0 auto 0.5rem;
+}
+
+.item-update-btn-container {
+    width: 100%;
+    display: flex;
+}
+
 .item-update-btn {
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 1.5rem;
     margin: auto;
     border-radius: 20px;
     border: none;
@@ -65,6 +74,22 @@
     font-weight: bold;
     background-color: var(--main-dark-color);
     color: var(--main-light-color);
+    line-height: 1;
+    box-shadow: 0px 3px 5px rgb(58, 58, 58);
+    text-decoration: none;
+    cursor: pointer;  
+}
+
+.item-update-cancel {
+    padding: 0.5rem 1.5rem;
+    margin: auto;
+    border-radius: 20px;
+    border: none;
+    font-size: 0.8rem;
+    font-weight: bold;
+    background-color: white;
+    color: var(--main-dark-color);
+    border: 1px solid var(--main-dark-color);
     line-height: 1;
     box-shadow: 0px 3px 5px rgb(58, 58, 58);
     text-decoration: none;
