--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -44,7 +44,7 @@
     font-size: 0.8rem;
     }
 
-.login-container p {
+.login-text-link {
     color: var(--main-dark-color);
     font-size: 0.8rem;
     margin-bottom: 0.5rem;
@@ -87,4 +87,11 @@
     color:  rgb(77, 77, 77);
     height: 18px;
     width: 18px;
+}
+
+.login-error {
+    color: red;
+    font-size: 0.8rem;
+    font-style: italic;
+    margin-bottom: 0.2rem;
 }
