--- a/src/components/main-navbar/main-navbar.css
+++ b/src/components/main-navbar/main-navbar.css
@@ -3,12 +3,19 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-navbar-container {
+    position: relative;
     padding: 0.5rem 1rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    z-index: 1;
+   
     background-color: var(--main-dark-color);
     box-shadow: 0px 3px 10px 0px rgb(101, 101, 101);
 }
