--- a/src/Pages/my-stalls/my-stalls.css
+++ b/src/Pages/my-stalls/my-stalls.css
@@ -16,7 +16,7 @@
     width: 100%;
     margin: 0.5rem 0;
     padding: 1rem;
-    box-shadow: 0 0 5px rgb(204, 203, 203);
+    box-shadow: 0 0 10px rgb(204, 203, 203);
 }
 
 .stall-update-container h3 {
@@ -103,5 +103,7 @@
     border: 2px solid var(--main-dark-color);
     border-radius: 10px;
     margin: 1rem auto;
+    font-size: 0.9rem;
     font-weight: 600;
+    text-decoration: none;
 }
