--- a/src/Pages/stall-details/stall-details.css
+++ b/src/Pages/stall-details/stall-details.css
@@ -94,6 +94,7 @@
     display: flex;
     justify-content: space-between;
     margin: 0.5rem 0;
+    text-transform: capitalize;
 }
 
 .stall-time-container {
