--- a/src/Pages/search-results/search-results.css
+++ b/src/Pages/search-results/search-results.css
@@ -3,3 +3,20 @@
     width: 100%;
     height: 100%;
   }
+
+  .map {
+    width: 100%;
+    height: 100%;
+  }
+  
+.autocomplete {
+  position: fixed;
+  top: 50%;
+  left: 40px;
+}
+
+.standalone {
+  position: fixed;
+  top: 30%;
+  left: 40px;
+}
