--- a/src/Pages/my-stalls/my-stalls.css
+++ b/src/Pages/my-stalls/my-stalls.css
@@ -73,8 +73,9 @@
     width: fit-content;
     margin: auto;
     padding: 0.2rem 0.7rem;
+    margin-top: 1rem;
     border-radius: 8px;
-    border: solid 1px rgb(148, 148, 148);
+    border: solid 1px rgb(77, 77, 77);
     color:  rgb(77, 77, 77);
     background-color: white;
     font-size: 0.7rem;
@@ -106,4 +107,10 @@
     font-size: 0.9rem;
     font-weight: 600;
     text-decoration: none;
+}
+
+.delete-stall {
+    color: red;
+    background-color: white;
+    border: 2px solid red;
 }
