--- a/src/Pages/stall-details-form/stall-details-form.css
+++ b/src/Pages/stall-details-form/stall-details-form.css
@@ -86,6 +86,14 @@ textarea:focus {
     background-color: white
 }
 
+.form-btn-container {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+
+}
+
 .form-submit-btn {
     padding: 0.5rem 2rem;
     border-radius: 20px;
@@ -94,6 +102,20 @@ textarea:focus {
     font-weight: bold;
     background-color: var(--main-dark-color);
     color: var(--main-light-color);
+    line-height: 1;
+    box-shadow: 0px 3px 5px rgb(58, 58, 58);
+    text-decoration: none;
+    cursor: pointer;  
+}
+
+.form-cancel-btn {
+    padding: 0.5rem 2rem;
+    border-radius: 20px;
+    border: 1px solid var(--main-dark-color);
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: var(--main-dark-color);
+    background-color: white;
     line-height: 1;
     box-shadow: 0px 3px 5px rgb(58, 58, 58);
     text-decoration: none;
