--- a/src/components/update-item-modal/update-item-modal.css
+++ b/src/components/update-item-modal/update-item-modal.css
@@ -11,17 +11,22 @@
 }
 
 .update-item-modal-content {
-    width: 80%;
+    width: 85%;
     display: flex;
     flex-direction: column;
-    padding: 1.5rem;
+    padding: 2rem 1.5rem;
     background-color: white;
     border-radius: 1rem;
 }
 
 .update-item-modal-content h5 {
-    margin: 0 auto 0.5rem;
+    margin: 0 auto 1rem;
     font-size: 1.2rem;
+}
+
+.update-item-modal-content p {
+    margin: 0 auto 1.5rem;
+    font-size: 1rem;
 }
 
 .update-item-input-container {
@@ -52,6 +57,7 @@
     color:  rgb(77, 77, 77);
     font-size: 0.8rem;
 }
+
 
 .item-update-error {
     font-size: 0.8rem;
@@ -94,4 +100,10 @@
     box-shadow: 0px 3px 5px rgb(58, 58, 58);
     text-decoration: none;
     cursor: pointer;  
+}
+
+.remove-stall-btn{
+    background-color: rgb(255, 255, 255);
+    color: red;
+    border: 2px solid red;
 }
