--- a/src/components/filters/filters.css
+++ b/src/components/filters/filters.css
@@ -10,28 +10,57 @@
 .filters-container h3 {
     width: 100%;
     text-align: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.6rem;
+}
+
+.filter-title {
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+
+.search-term {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin: 0 1rem;
+    padding: 0.2rem 0.6rem;
+    font-weight: bold;
+    font-size: 0.7rem;
+    border: 1px solid grey;
+    border-radius: 15px;
+    
 }
 
 .close {
     position: absolute;
     top: 12px;
     right: 12px;
-    width: 1.4rem;
-    height: 1.4rem;
-    padding: 0.4rem;
+    width: 1.1rem;
+    height: 1.1rem;
+    padding: 0.2rem;
     border-radius: 50%;
-    background-color: rgba(45, 45, 45, 0.7);
-    color: rgb(255, 255, 255);
+    /* background-color: rgba(45, 45, 45, 0.7); */
+    color: var(--main-dark-color);
+    border: 1px solid var(--main-dark-color);
 }
 
 .filter {
     display: flex;
     align-items: center;
+    gap: 1rem
 }
 
-.edit-icon {
-    margin-left: 1rem;
+.filter .narrow-btn {
+    padding: 0.3rem 1rem;
+}
+
+.remove-icon {
+    width: 1rem;
+    height: 1rem;
+    padding: 0.2rem;
+    border: 1px solid rgb(79, 79, 79);
+    border-radius: 50%;
+    color: rgb(79, 79, 79);
 }
 
 .separator-line {
@@ -45,26 +74,32 @@
 }
 
 .vertical {
+    display: flex;
     flex-direction: column;
     align-items: start;
-
 }
 
 .filter-btn-container {
-    width: 90%;
+    width: 95%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     margin: 0.5rem auto 0;
-    gap: 0.3rem
+    gap: 0.6rem
 }
 
 .filter-btn {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
     padding: 0.5rem 1rem;
     border-radius: 20px;
     border: solid 2px var(--main-dark-color);
     font-size: 0.7rem;
     line-height: 1;
+    background-color: rgb(237, 237, 237);
+    color: black;
+    font-family: inherit;
 }
 
 .filter-selected {
