--- a/src/Pages/stall-details/stall-details.css
+++ b/src/Pages/stall-details/stall-details.css
@@ -33,6 +33,8 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    /* Slight padding to help center the heart icon */
+    padding: 1px 0 0 1px
 }
 
 .stall-image {
