--- a/src/components/filters/filters.css
+++ b/src/components/filters/filters.css
@@ -4,7 +4,9 @@
     background-color: var(--main-light-color);
     padding: 1rem;
     font-size: 0.8rem;
-    color: var(--text-color)
+    color: var(--text-color);
+    z-index: -1;
+    animation: open-animation 0.3s ease-in-out forwards;
 }
 
 .filters-container h3 {
@@ -111,3 +113,13 @@
     font-style: italic;
 }
 
+@keyframes open-animation {
+    from {
+        opacity: 0;
+        transform: translateY(-80px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
