--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -5,11 +5,9 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
     z-index: 1;
-    background-color: var(--main-dark-color);
-    box-shadow: 0px 3px 10px 0px rgb(101, 101, 101);
 }
 
 .search-container {
@@ -17,7 +15,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0.2rem
+    gap: 0.2rem;
+    background-color: var(--main-dark-color);
+    box-shadow: 0px 3px 10px 0px rgb(101, 101, 101);
 }
 
 .input-container {
@@ -33,6 +33,7 @@
 }
 
 .search-input {
+    width: 75%;
     border: none;
     padding: 0.5rem;
     line-height: 1;
