--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -5,8 +5,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* align-items: center;
-    justify-content: center; */
     z-index: 1;
 }
 
@@ -14,8 +12,9 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 0.2rem;
+    justify-content: space-around;
+    padding: 0.3rem 0.5rem;
+    gap: 0.3rem;
     background-color: var(--main-dark-color);
     box-shadow: 0px 3px 10px 0px rgb(101, 101, 101);
 }
@@ -23,12 +22,12 @@
 .input-container {
     width: 80%;
     background-color: var(--main-light-color);
-    height: 45px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0.5rem;
-    padding: 0 1rem;
+    padding: 0 0.5rem;
     border-radius: 25px;
 }
 
@@ -38,19 +37,5 @@
     padding: 0.5rem;
     line-height: 1;
     background-color: transparent;
-}
-
-.circle-btn {
-    height: 30px;
-    min-width: 30px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.back-arrow {
-    width: 20px;
-    height: 20px;
 }
 
