--- a/src/components/filters/filters.css
+++ b/src/components/filters/filters.css
@@ -20,19 +20,6 @@
     font-weight: 500;
 }
 
-.search-term {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    margin: 0 1rem;
-    padding: 0.2rem 0.6rem;
-    font-weight: bold;
-    font-size: 0.7rem;
-    border: 1px solid grey;
-    border-radius: 15px;
-    
-}
-
 .close {
     position: absolute;
     top: 12px;
@@ -41,7 +28,6 @@
     height: 1.1rem;
     padding: 0.2rem;
     border-radius: 50%;
-    /* background-color: rgba(45, 45, 45, 0.7); */
     color: var(--main-dark-color);
     border: 1px solid var(--main-dark-color);
 }
@@ -50,10 +36,6 @@
     display: flex;
     align-items: center;
     gap: 1rem
-}
-
-.filter .narrow-btn {
-    padding: 0.3rem 1rem;
 }
 
 .remove-icon {
@@ -71,46 +53,13 @@
     margin: 1rem auto 1rem auto;
 }
 
-.filter-label {
-    margin-right: 0.5rem;
-}
-
-.vertical {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-}
-
 .filter-btn-container {
     width: 95%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 0.5rem auto 0;
+    margin: 1rem auto 0.5rem;
     gap: 0.6rem
-}
-
-.filter-btn {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    padding: 0.5rem 1rem;
-    border-radius: 20px;
-    border: solid 2px var(--main-dark-color);
-    font-size: 0.7rem;
-    line-height: 1;
-    background-color: rgb(237, 237, 237);
-    color: black;
-    font-family: inherit;
-}
-
-.filter-selected {
-    background-color: var(--main-dark-color);
-    color: var(--main-light-color);
-}
-
-.italic {
-    font-style: italic;
 }
 
 @keyframes open-animation {
