--- a/src/components/update-item-modal/update-item-modal.css
+++ b/src/components/update-item-modal/update-item-modal.css
@@ -58,7 +58,6 @@
     font-size: 0.8rem;
 }
 
-
 .item-update-error {
     font-size: 0.8rem;
     color: red;
@@ -69,37 +68,8 @@
 .item-update-btn-container {
     width: 100%;
     display: flex;
-}
-
-.item-update-btn {
-    padding: 0.5rem 1.5rem;
-    margin: auto;
-    border-radius: 20px;
-    border: none;
-    font-size: 0.8rem;
-    font-weight: bold;
-    background-color: var(--main-dark-color);
-    color: var(--main-light-color);
-    line-height: 1;
-    box-shadow: 0px 3px 5px rgb(58, 58, 58);
-    text-decoration: none;
-    cursor: pointer;  
-}
-
-.item-update-cancel {
-    padding: 0.5rem 1.5rem;
-    margin: auto;
-    border-radius: 20px;
-    border: none;
-    font-size: 0.8rem;
-    font-weight: bold;
-    background-color: white;
-    color: var(--main-dark-color);
-    border: 1px solid var(--main-dark-color);
-    line-height: 1;
-    box-shadow: 0px 3px 5px rgb(58, 58, 58);
-    text-decoration: none;
-    cursor: pointer;  
+    justify-content: center;
+    gap: 3rem
 }
 
 .remove-stall-btn{
