--- a/src/Pages/stall-details/stall-details.css
+++ b/src/Pages/stall-details/stall-details.css
@@ -6,35 +6,18 @@
     top: 0;
     left: 0;
     width: 100%;
-    /* height: 100%; */
     z-index: 10000;
     background-color: white;
 }
 
-.stall-details-btn {
-    background-color: var(--main-light-color);
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
+.stall-details-btn-container {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    padding: 0.5rem;
     display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.back-btn {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-     /* remove styling applied by using <Link/>  */
-    border: none;
-}
-
-.fav-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    /* Slight padding to help center the heart icon */
-    padding: 1px 0 0 1px
+    justify-content: space-between;
 }
 
 .stall-image {
@@ -95,6 +78,10 @@
         font-size: inherit;
     }
 
+    & p:first-letter {
+        text-transform: capitalize;
+    }
+
     & ul {
         width: 100%;
         display: flex;
@@ -111,11 +98,10 @@
 }
 
 .stall-item-container {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 8fr 1fr;
     margin: 0.5rem 0;
-    text-transform: capitalize;
 }
 
 .stall-time-container {
