--- a/src/components/update-item-modal/update-item-modal.css
+++ b/src/components/update-item-modal/update-item-modal.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(63, 63, 63, 0.8);
+    z-index: 10000;
 }
 
 .update-item-modal-content {
