--- a/src/components/results-list/results-list.css
+++ b/src/components/results-list/results-list.css
@@ -1,27 +1,20 @@
 .results-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 5rem 0;
-}
-
-.search-summary {
-    width: 100%;
-    margin-bottom: 0.5rem;
-    text-align: center;
-    font-size: 0.9rem;
-    font-weight: 600;
 }
 
 .result-container {
     display: flex;
     align-items: center;
     width: 100%;
+    max-width: 600px;
     height: 150px;
     background-color: white;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
     padding: 0.6rem;
     box-shadow: 0 0 10px rgb(204, 203, 203);
-    /* remove styling applied by using <Link/>  */
-    text-decoration: inherit;
-    color: inherit;
 }
 
 .result-image {
@@ -56,6 +49,7 @@
 
 .result-text {
     color: rgb(55, 55, 55);
+    text-transform: capitalize;
 }
 
 .result-status {
