--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -12,15 +12,27 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     padding: 0.3rem 0.5rem;
-    gap: 0.3rem;
+    gap: 0.5rem;
     background-color: var(--main-dark-color);
-    box-shadow: 0px 3px 10px 0px rgb(101, 101, 101);
+    box-shadow: 0px 2px 6px 0px rgb(137, 137, 137);
+}
+
+/* search title is displayed when width > 600px - see media query  */
+.search-title {
+    display: none;
+}
+
+.search-elements {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    max-width: 500px;
 }
 
 .input-container {
-    width: 80%;
+    width: 100%;
     background-color: var(--main-light-color);
     height: 40px;
     display: flex;
@@ -39,3 +51,21 @@
     background-color: transparent;
 }
 
+
+/* For screen larger than 600px the app title is added to the search bar */
+/* search container altered so title and dropdown buttons appear on either side of sceeen, with search in the middle */
+@media screen and (min-width: 600px) {
+    .search-container {
+        justify-content: space-between;
+        padding: 0.3rem 1rem;
+    }
+    .search-title {
+        display: block;
+        font-size: 0.9rem;
+        font-family: Podkova, Arial, Helvetica, sans-serif;
+        font-weight: 600;
+        color: white;
+        width: 50px;
+        line-height: 1rem;
+    }
+}
