--- a/src/components/filters/filters.css
+++ b/src/components/filters/filters.css
@@ -1,19 +1,21 @@
+/* CSS nesting - not supported in older browsers */
 .filters-container {
     position: relative;
     width: 100%;
     max-width: 600px;
-    background-color: var(--main-light-color);
     padding: 1rem;
-    font-size: 0.8rem;
     color: var(--text-color);
+    background-color: var(--main-light-color);
+    box-shadow: 1px 0 10px rgb(88, 88, 88);
+    font-size: 0.8rem;
     z-index: -1;
     animation: open-animation 0.3s ease-in-out forwards;
-}
 
-.filters-container h3 {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 0.6rem;
+    & h3 {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 0.6rem;
+    }
 }
 
 .filter-title {
