--- a/src/Pages/stall-details-form/stall-details-form.css
+++ b/src/Pages/stall-details-form/stall-details-form.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 95%;
+    max-width: 600px;
     margin: 4rem auto 0;
     padding: 1.5rem 0;
     border-radius: 10px;
