--- a/src/Pages/my-stalls/my-stalls.css
+++ b/src/Pages/my-stalls/my-stalls.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin: 5.5rem 0 0;
+    max-width: 700px;
+    margin: 5.5rem auto 0;
 }
 
 .my-stall-container h2 {
@@ -76,20 +77,19 @@
 
 .update-add-btn {
     width: fit-content;
-    margin: auto;
     padding: 0.2rem 0.7rem;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     border-radius: 8px;
     border: solid 1px rgb(77, 77, 77);
     color:  rgb(77, 77, 77);
     background-color: white;
     font-size: 0.7rem;
-    
 }
 
 .update-btn-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 2rem;
 }
 
 .add-stall-btn {
