--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -1,39 +1,65 @@
 .homepage {
-    position: relative;
+    --padding-for-navbar: 60px;
+
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: var(--padding-for-navbar);
 }
 
-.home-background {
-    position: absolute;
-    top: 40px;
-    left: 0;
+.hero {
+    position: relative;
     width: 100%;
+    /* make this section fit the hieght of the screen - account for navbar */
+    min-height: calc(100vh - var(--padding-for-navbar));
+    /* height: 100vh; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url("../../assets/home-background-narrow.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-color: rgba(0, 0, 0, 0.77);
+    /* set z-index so tranparent layer can be added over top */
+    z-index: 1;
+}
+
+/* transparent element to darken background image */
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
     z-index: -1;
 }
 
+/* CSS nesting - not supported in all browsers */
 .home-main-text {
-    padding: 90px 2rem 0;
-    width: 100%;
+    padding: 0 2rem;
     display: flex;
     flex-direction: column;
     color: white;
-}
 
-.home-main-text h2 {
-    font-size: 1.3rem;
-    text-shadow: rgb(0, 0, 0) 1px 1px 5px;
-    text-shadow: rgb(0, 0, 0) 2px 2px 10px;
-}
+    & h2 {
+        font-size: 1.4rem;
+        text-align: center;
+        text-shadow: rgb(0, 0, 0) 1px 1px 10px;
+    }
 
-.home-main-text p {
-    margin-top: 0.5rem;
-    font-size: 0.7rem;
-    font-style: italic;
-    font-weight: 400;
-    text-shadow: rgb(0, 0, 0) 1px 1px 5px;
+    & p {
+        margin-top: 0.5rem;
+        font-size: 0.8rem;
+        font-style: italic;
+        font-weight: 400;
+        text-align: center;
+        text-shadow: rgb(0, 0, 0) 1px 1px 10px;
+    }
 }
 
 .home-search-input {
@@ -57,11 +83,10 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    margin: auto;
+    margin: 1rem auto;
     padding: 0.4rem 1.5rem 0.4rem 2rem;
     color: white;
     font-size: 0.8rem;
-    
     background-color: var(--main-dark-color);
     border: none;
     border-radius: 10px;
@@ -72,6 +97,56 @@
 }
 
 .home-search-icon {
-    height: 18px;
-    width: 18px;
+    height: 17px;
+    width: 17px;
+}
+
+@media screen and (min-width: 500px) {
+    .hero {
+        background-image: url("../../assets/home-background-wide.jpg");
+    }
+
+    .hero::before {
+    background-color: rgba(0, 0, 0, 0.6);
+    }
+
+    .home-main-text {
+    margin-top: 2rem;
+
+    & h2 {
+        font-size: 2rem;
+    }
+
+    & p {
+        font-size: 0.9rem;
+    }
+}
+
+.home-search-input {
+    width: 350px;
+    height: 40px;
+    margin: 3rem 0 1rem;
+    font-size: 0.8rem;
+}
+
+.home-search-btn {
+    font-size: 1.1rem;
+}
+
+.home-search-icon {
+    height: 20px;
+    width: 20px;
+}
+}
+
+@media screen and (min-width: 800px) {
+    .home-main-text {
+        & h2 {
+            font-size: 2.8rem;
+        }
+    
+        & p {
+            font-size: 1.1rem;
+        }
+    }
 }
