--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -1,3 +1,4 @@
+/* z-index of .search-bar needs to be higher than .main-navbar */
 .search-bar {
     position: fixed;
     top: 0;
@@ -6,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .search-container {
