--- a/src/components/stall-preview/stall-preview.css
+++ b/src/components/stall-preview/stall-preview.css
@@ -1,62 +1,60 @@
 .info-window-container {
-    position: absolute;
-    display: flex;
-    bottom: 70px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    right: 0;
-    width: 85%;
-    max-width: 600px;
-    height: 110px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 5px;
+  --preview-border-radius: 5px;
+  position: absolute;
+  display: flex;
+  /* space from bottom of the page */
+  bottom: 70px;
+  /* postion in center of screen */
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 85%;
+  max-width: 600px;
+  height: 7rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: var(--preview-border-radius);
 }
-  
-.info-text-container{
-    width: 100%;
-    padding: 0.4rem 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 0.8rem;
+
+.info-text-container {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 0.8rem;
+  text-align: center;
 }
-  
-.info-title{
-    text-align: center;
-    font-size: 0.8rem;
+
+.info-title {
+  font-size: inherit;
 }
 
 .info-text {
-    height: 3rem;
-    color: rgb(55, 55, 55);
-    text-align: center;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-transform: capitalize;
+  width: 100%;
+  color: rgb(55, 55, 55);
+  text-transform: capitalize;
 }
 
 .info-image {
-    height: 100%;
-    min-width: 110px;
-    max-width: 110px;
-    object-fit: cover;
-    border-radius: 5px;
+  height: 100%;
+  min-width: 110px;
+  max-width: 110px;
+  object-fit: cover;
+  border-radius: var(--preview-border-radius) 0 0 var(--preview-border-radius);
 }
 
 .info-status {
-    color:green;
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .close-btn {
-    position: absolute;
-    top: 8px;
-    left: 8px;
-    width: 1.6rem;
-    height: 1.6rem;
-    padding: 0.4rem;
-    border-radius: 50%;
-    background-color: rgba(45, 45, 45, 0.7);
-    color: rgb(255, 255, 255);
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  width: 1.6rem;
+  height: 1.6rem;
+  padding: 0.4rem;
+  border-radius: 50%;
+  background-color: rgba(45, 45, 45, 0.7);
+  color: rgb(255, 255, 255);
 }
