--- a/src/Pages/stall-details/stall-details.css
+++ b/src/Pages/stall-details/stall-details.css
@@ -1,194 +1,196 @@
 .stall-details {
-    /* use absolute position to place over the navbar */
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
+  /* Use absolute position to place over top of the main navbar on small screens */
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  /* Set background color to white to make sure it remains hidden */
+  background-color: white;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 /* navigation buttons - shown for small screens only */
 .stall-details-btn-container {
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    padding: 0.5rem;
-    display: flex;
-    justify-content: space-between;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .stall-image {
-    width: 100%;
-    height: 15rem;
-    object-fit: cover;
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
 }
 
 /* title and stall status in this container */
 .stall-title-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0.5rem 1rem 0.2rem;
-    font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0.5rem 1rem 0.2rem;
+  font-weight: 600;
 }
 
 .stall-name {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .stall-address {
-    width: 100%;
-    padding: 0 1rem 1rem;
-    font-size: 0.8rem;
-    text-decoration: underline;
+  width: 100%;
+  padding: 0 1rem 1rem;
+  font-size: 0.8rem;
+  text-decoration: underline;
 }
 
 /* CSS nesting used below - not supported in old browsers */
 .stall-text-subsection {
-    width: 90%;
-    padding: 1rem 0;
-    font-size: 0.8rem;
-    border-top: 1px solid var(--main-dark-color) ;
+  width: 90%;
+  padding: 1rem 0;
+  font-size: 0.8rem;
+  border-top: 1px solid var(--main-dark-color);
 
-    & h3 {
-        font-size: 0.9rem;
-        color: var(--main-dark-color);
-        margin-bottom: 0.2rem;
-    }
+  & h3 {
+    font-size: 0.9rem;
+    color: var(--main-dark-color);
+    margin-bottom: 0.2rem;
+  }
 
-    & p:first-letter {
-        text-transform: capitalize;
-    }
+  & p:first-letter {
+    text-transform: capitalize;
+  }
 
-    /* labels in the about section (e.g. Organic) */
-    & ul {
-        width: 100%;
-        display: flex;
-        gap: 1rem;
-        margin: 0.2rem 0 0.5rem;
-        text-transform: capitalize;
-    }
+  /* labels in the about section (e.g. Organic) */
+  & ul {
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+    margin: 0.2rem 0 0.5rem;
+    text-transform: capitalize;
+  }
 
-    & li {
-        list-style-position: inside;
-        font-weight: 500;
-    }
+  & li {
+    list-style-position: inside;
+    font-weight: 500;
+  }
 }
 
 /* line for an individual fruit or vege */
 /* grid to separate item and dollar amount */
 .stall-item-container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 8fr 1fr;
-    margin: 0.5rem 0;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 8fr 1fr;
+  margin: 0.5rem 0;
 }
 
 .stall-time-container {
-    width: 100%;
-    min-width: 20rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  width: 100%;
+  min-width: 20rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 /* button container for wide screen only */
 .stall-details-wide-btn-container {
-    display: none;
+  display: none;
 }
 
 /* make the top image larger on screens wider than 500px */
 @media screen and (min-width: 500px) {
-    .stall-image {
-        height: 20rem;
-    }
+  .stall-image {
+    height: 20rem;
+  }
 }
 
 /* Different format for desktop and tablets  */
 @media screen and (min-width: 700px) {
-    .stall-details {
-        position: relative;
-        margin: auto;
-        display: grid;
-        grid-template-columns: auto auto;
-        /* set height for first two rows - contains title and address */
-        grid-template-rows: 2.5rem 2rem auto auto;
-        gap: 0 2rem;
-        align-items: start;
-        /* set max-width so not too streched on large screen */
-        max-width: 900px;
-        /* large top padding to push down below nav */
-        padding: 6rem 2rem 0;
-    }
+  .stall-details {
+    position: relative;
+    margin: auto;
+    display: grid;
+    grid-template-columns: auto auto;
+    /* set height for first two rows - contains title and address */
+    grid-template-rows: 2.5rem 2rem auto auto;
+    gap: 0 2rem;
+    align-items: start;
+    /* set max-width so not too streched on large screen */
+    max-width: 900px;
+    /* large top padding to push down below nav */
+    padding: 6rem 2rem 0;
+  }
 
-    /* hide top buttons on larger screens */
-    .stall-details-btn-container {
-        display: none;
-    }
+  /* hide top buttons on larger screens */
+  .stall-details-btn-container {
+    display: none;
+  }
 
-    .stall-image {
-        height: 15rem;
-        width: auto;
-        grid-column: 2;
-        grid-row: 1 / 4;
-        margin-bottom: 1rem;
-        border-radius: 1rem;
-        align-self: center;
-        justify-self: center;
-    }
+  .stall-image {
+    height: 15rem;
+    width: auto;
+    grid-column: 2;
+    grid-row: 1 / 4;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
+    align-self: center;
+    justify-self: center;
+  }
 
-    .stall-title-container {
-        padding: 0;
-    }
+  .stall-title-container {
+    padding: 0;
+  }
 
-    .stall-name {
-        font-size: 1.5rem;
-    }
-    
-    .stall-address {
-        padding: 0;
-    }
-    
-    .stall-text-subsection {
-        width: 100%;
-        padding: 1rem 0.5rem;
-    }
+  .stall-name {
+    font-size: 1.5rem;
+  }
 
-    .stall-details-wide-btn-container {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 1rem;
-        margin-top: 1rem;
-    }
-   
-    /* below are classes to place elements in specific grid cells */
-    .left-col {
-        grid-column: 1;
-    }
+  .stall-address {
+    padding: 0;
+  }
 
-    .right-col {
-        grid-column: 2;
-    }
+  .stall-text-subsection {
+    width: 100%;
+    padding: 1rem 0.5rem;
+  }
 
-    .row-one {
-        grid-row: 1;
-    }
+  .stall-details-wide-btn-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
 
-    .row-two {
-        grid-row: 2;
-    }
+  /* below are classes to place elements in specific grid cells */
+  .left-col {
+    grid-column: 1;
+  }
 
-    .row-three {
-        grid-row: 3;
-    }
+  .right-col {
+    grid-column: 2;
+  }
 
-    .row-four {
-        grid-row: 4;
-    }
-} 
+  .row-one {
+    grid-row: 1;
+  }
+
+  .row-two {
+    grid-row: 2;
+  }
+
+  .row-three {
+    grid-row: 3;
+  }
+
+  .row-four {
+    grid-row: 4;
+  }
+}
