--- a/src/components/how-to-modal/how-to-modal.css
+++ b/src/components/how-to-modal/how-to-modal.css
@@ -1,4 +1,4 @@
-.welcome-modal-container {
+.how-to-modal-container {
   position: fixed;
   top: 0;
   left: 0;
@@ -12,44 +12,27 @@
 }
 
 /* CSS nesting - not supported in older browsers */
-.welcome-modal-content {
-  width: 85%;
+.how-to-modal-content {
+  width: 80%;
   max-width: 1000px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 2.5rem;
   background-color: white;
   border-radius: 1rem;
-
-  & h3 {
-    margin-bottom: 0.5rem;
-    color: var(--main-dark-color);
-    text-align: center;
-    font-size: 2rem;
-    font-family: Podkova, Arial, Helvetica, sans-serif;
-    line-height: 1.1;
-  }
 
   & h5 {
     margin: 0 auto 1rem;
     font-size: 1.2rem;
     color: var(--main-dark-color);
-    font-style: italic;
-    font-weight: 300;
+    font-family: inherit;
   }
 
-  & p,
-  ul {
+  & p {
+    width: 100%;
     font-size: 0.8rem;
-    margin-bottom: 1rem;
-  }
-
-  & li {
-    /* line up bullets with text above */
-    list-style-position: inside;
-    /* line up second line of text with the first for each bullet */
-    text-indent: -1.5em;
-    padding-left: 1.5em;
+    margin-bottom: 0.5rem;
   }
 
   & .bold {
@@ -57,7 +40,14 @@
   }
 }
 
-.welcome-btn-container {
+.how-to-video {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  margin: 1.5rem auto;
+}
+
+.how-to-btn-container {
   width: 100%;
   display: flex;
   justify-content: center;
