--- a/src/components/stall-preview/stall-preview.css
+++ b/src/components/stall-preview/stall-preview.css
@@ -12,6 +12,7 @@
   height: 7rem;
   background-color: rgb(255, 255, 255);
   border-radius: var(--preview-border-radius);
+  cursor: pointer;
 }
 
 .info-text-container {
