--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -1,152 +1,156 @@
 .homepage {
-    --padding-for-navbar: 60px;
+  --padding-for-navbar: 60px;
 
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: var(--padding-for-navbar);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: var(--padding-for-navbar);
 }
 
 .hero {
-    position: relative;
-    width: 100%;
-    /* make this section fit the hieght of the screen - account for navbar */
-    min-height: calc(100vh - var(--padding-for-navbar));
-    /* height: 100vh; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-image: url("../../assets/home-background-narrow.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-color: rgba(0, 0, 0, 0.77);
-    /* set z-index so tranparent layer can be added over top */
-    z-index: 1;
+  position: relative;
+  width: 100%;
+  /* make this section fit the hieght of the screen - account for navbar */
+  min-height: calc(100vh - var(--padding-for-navbar));
+  /* height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("../../assets/home-background-narrow.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: rgba(0, 0, 0, 0.77);
+  /* set z-index so tranparent layer can be added over top */
+  z-index: 1;
 }
 
 /* transparent element to darken background image */
 .hero::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: -1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: -1;
 }
 
 /* CSS nesting - not supported in all browsers */
 .home-main-text {
-    padding: 0 2rem;
-    display: flex;
-    flex-direction: column;
-    color: white;
+  padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  color: white;
 
-    & h2 {
-        font-size: 1.4rem;
-        text-align: center;
-        text-shadow: rgb(0, 0, 0) 1px 1px 10px;
-    }
+  & h2 {
+    font-size: 1.5rem;
+    text-align: center;
+    text-shadow: rgb(0, 0, 0) 1px 1px 10px;
+  }
 
-    & p {
-        margin-top: 0.5rem;
-        font-size: 0.8rem;
-        font-style: italic;
-        font-weight: 400;
-        text-align: center;
-        text-shadow: rgb(0, 0, 0) 1px 1px 10px;
-    }
+  & p {
+    margin-top: 0.5rem;
+    font-size: 0.8rem;
+    font-style: italic;
+    font-weight: 400;
+    text-align: center;
+    text-shadow: rgb(0, 0, 0) 1px 1px 10px;
+  }
 }
 
 .home-search-input {
-    width: 250px;
-    height: 30px;
-    margin: 2rem 0 1rem;
-    padding: 1.1rem;
-    background-color: white;
-    border-radius: 10px;
-    border: none;
-    font-family: inherit;
-    font-size: 0.7rem;
+  width: 250px;
+  height: 30px;
+  margin: 2rem 0 1rem;
+  padding: 1.1rem;
+  background-color: white;
+  border-radius: 10px;
+  border: none;
+  font-family: inherit;
+  font-size: 0.7rem;
 }
 
 .home-search-input::placeholder {
-    color: var(--main-dark-color);
+  color: var(--main-dark-color);
 }
 
 .home-search-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    margin: 1rem auto;
-    padding: 0.4rem 1.5rem 0.4rem 2rem;
-    color: white;
-    font-size: 0.8rem;
-    background-color: var(--main-dark-color);
-    border: none;
-    border-radius: 10px;
-    box-shadow: rgb(171, 171, 171) 0 0 4px;
-    cursor: pointer;
-    /* remove styling added from Link component */
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin: 1rem auto;
+  padding: 0.4rem 1.5rem 0.4rem 2rem;
+  color: white;
+  font-size: 0.8rem;
+  background-color: var(--main-dark-color);
+  border: none;
+  border-radius: 10px;
+  box-shadow: rgb(171, 171, 171) 0 0 4px;
+  cursor: pointer;
+  /* remove styling added from Link component */
+  text-decoration: none;
+}
+
+.home-search-btn:hover {
+  box-shadow: rgb(171, 171, 171) 0 0 10px;
 }
 
 .home-search-icon {
-    height: 17px;
-    width: 17px;
+  height: 17px;
+  width: 17px;
 }
 
 @media screen and (min-width: 500px) {
-    .hero {
-        background-image: url("../../assets/home-background-wide.jpg");
-    }
+  .hero {
+    background-image: url("../../assets/home-background-wide.jpg");
+  }
 
-    .hero::before {
+  .hero::before {
     background-color: rgba(0, 0, 0, 0.6);
-    }
+  }
 
-    .home-main-text {
+  .home-main-text {
     margin-top: 2rem;
 
     & h2 {
-        font-size: 2rem;
+      font-size: 2rem;
     }
 
     & p {
-        font-size: 0.9rem;
+      font-size: 0.9rem;
     }
-}
+  }
 
-.home-search-input {
+  .home-search-input {
     width: 350px;
     height: 40px;
     margin: 3rem 0 1rem;
     font-size: 0.8rem;
-}
+  }
 
-.home-search-btn {
+  .home-search-btn {
     font-size: 1.1rem;
-}
+  }
 
-.home-search-icon {
+  .home-search-icon {
     height: 20px;
     width: 20px;
-}
+  }
 }
 
 @media screen and (min-width: 800px) {
-    .home-main-text {
-        & h2 {
-            font-size: 2.8rem;
-        }
-    
-        & p {
-            font-size: 1.1rem;
-        }
+  .home-main-text {
+    & h2 {
+      font-size: 2.8rem;
     }
+
+    & p {
+      font-size: 1.1rem;
+    }
+  }
 }
