--- a/src/Pages/my-stalls/my-stalls.css
+++ b/src/Pages/my-stalls/my-stalls.css
@@ -1,105 +1,110 @@
 .my-stall-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 700px;
-    margin: 5.5rem auto 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 700px;
+  margin: 5.5rem auto 0;
 }
 
 .my-stall-container h2 {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .stall-update-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 0.5rem 0;
-    padding: 1rem;
-    box-shadow: 0 0 10px rgb(204, 203, 203);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 0.5rem 0;
+  padding: 1rem;
+  box-shadow: 0 0 10px rgb(204, 203, 203);
 }
 
 .stall-update-container h3 {
-    margin-bottom: 0.5rem;
-    font-size: 1.1rem;
-    font-weight: 700;
+  margin-bottom: 0.5rem;
+  font-size: 1.1rem;
+  font-weight: 700;
 }
 
 .stall-update-container h5 {
-    margin: 0;
-    font-size: 0.8rem;
+  margin: 0;
+  font-size: 0.8rem;
 }
 
 /* CSS nesting - not supported in all browsers */
 .stall-update-container p {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 
-    &:first-letter {
-        text-transform: capitalize;
-    }
+  &:first-letter {
+    text-transform: capitalize;
+  }
 }
 
 .open-update-container {
-    display: flex;
-    align-items:center;
-    gap: 0.6rem;
-    margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+  margin-bottom: 0.5rem;
 }
 
 .open {
-    color: green;
+  color: green;
 }
 
 .closed {
-    color: red;
+  color: red;
 }
 
 .update-instock-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 1.5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 1.5rem;
 }
 
 .update-item-container {
-    display: grid;
-    grid-template-columns: 10fr 3fr 1.5fr 1.5fr;
-    align-items: center;
-    margin: 0.3rem 0;
+  display: grid;
+  grid-template-columns: 10fr 3fr 1.5fr 1.5fr;
+  align-items: center;
+  margin: 0.3rem 0;
 }
 
 .update-icon {
-    color: var(--main-dark-color);
-    cursor: pointer;
+  color: var(--main-dark-color);
+  cursor: pointer;
 }
 
 .update-add-btn {
-    width: fit-content;
-    padding: 0.2rem 0.7rem;
-    margin-top: 0.5rem;
-    border-radius: 8px;
-    border: solid 1px rgb(77, 77, 77);
-    color:  rgb(77, 77, 77);
-    background-color: white;
-    font-size: 0.7rem;
+  width: fit-content;
+  padding: 0.2rem 0.7rem;
+  margin-top: 0.5rem;
+  border-radius: 8px;
+  border: solid 1px rgb(77, 77, 77);
+  color: rgb(77, 77, 77);
+  background-color: white;
+  font-size: 0.7rem;
+  cursor: pointer;
+
+  &:hover {
+    filter: brightness(97%);
+  }
 }
 
 .update-btn-container {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .add-stall-btn {
-    padding: 0.3rem 1.5rem;
-    color: var(--main-dark-color);
-    background-color: white;
-    border: 2px solid var(--main-dark-color);
-    border-radius: 10px;
-    margin: 1rem auto;
-    font-size: 0.9rem;
-    font-weight: 600;
-    text-decoration: none;
+  padding: 0.3rem 1.5rem;
+  color: var(--main-dark-color);
+  background-color: white;
+  border: 2px solid var(--main-dark-color);
+  border-radius: 10px;
+  margin: 1rem auto;
+  font-size: 0.9rem;
+  font-weight: 600;
+  text-decoration: none;
 }
