--- a/src/Pages/stall-details/stall-details.css
+++ b/src/Pages/stall-details/stall-details.css
@@ -48,6 +48,11 @@
   padding: 0 1rem 1rem;
   font-size: 0.8rem;
   text-decoration: underline;
+  cursor: pointer;
+
+  &:hover {
+    color: var(--main-dark-color);
+  }
 }
 
 /* CSS nesting used below - not supported in old browsers */
@@ -125,8 +130,8 @@
     max-width: 900px;
     /* large top padding to push down below nav */
     padding: 6rem 2rem 0;
-    /* remove background-color so that it doesn't cover nav bar */
-    background-color: transparent;
+    /* Low z-index so the main nav is on top */
+    z-index: 1;
   }
 
   /* hide top buttons on larger screens */
@@ -170,7 +175,9 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    margin-top: 1rem;
+    margin: 2rem 0;
+    /* center this container by placing across both columns */
+    grid-column: 1 / 3;
   }
 
   /* below are classes to place elements in specific grid cells */
