--- a/src/components/button-std/button-std.css
+++ b/src/components/button-std/button-std.css
@@ -8,6 +8,13 @@
   font-size: 0.8rem;
   font-weight: 500;
   text-decoration: none;
+  cursor: pointer;
+
+  /* slight transition to darker on hover */
+  transition: filter 0.1s ease-in-out;
+  &:hover {
+    filter: brightness(90%);
+  }
 }
 
 .red-button-std {
