--- a/src/components/cricle-btn/circle-btn.css
+++ b/src/components/cricle-btn/circle-btn.css
@@ -1,27 +1,38 @@
 .circle-btn {
-    --circle-btn-size: 30px;
-    height: var(--circle-btn-size);
-    min-width: var(--circle-btn-size);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 2px;
+  --circle-btn-size: 30px;
+  height: var(--circle-btn-size);
+  min-width: var(--circle-btn-size);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 0.1rem;
+  cursor: pointer;
+  /* add a slight transition to on hover box-shadow */
+  transition: box-shadow 0.1s ease-in-out;
 }
 
 .dark-circle-btn {
-    color: var(--main-light-color);
-    background-color: var(--main-dark-color);
-    border: 2px solid var(--main-light-color);
+  color: var(--main-light-color);
+  background-color: var(--main-dark-color);
+  border: 2px solid var(--main-light-color);
+}
+
+.dark-circle-btn:hover {
+  box-shadow: 0px 0px 3px var(--main-light-color);
 }
 
 .light-circle-btn {
-    color: var(--main-dark-color);
-    background-color: var(--main-light-color);
-    border: 2px solid var(--main-dark-color);
+  color: var(--main-dark-color);
+  background-color: var(--main-light-color);
+  border: 2px solid var(--main-dark-color);
+}
+
+.light-circle-btn:hover {
+  box-shadow: 0px 0px 3px var(--main-dark-color);
 }
 
 .circle-btn-icon {
-    width: calc(var(--circle-btn-size) * 0.55);
-    height: calc(var(--circle-btn-size) * 0.55);
+  width: calc(var(--circle-btn-size) * 0.55);
+  height: calc(var(--circle-btn-size) * 0.55);
 }
