--- a/src/components/dropdown-menu/dropdown-menu.css
+++ b/src/components/dropdown-menu/dropdown-menu.css
@@ -1,48 +1,49 @@
 .dropdown-menu {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    z-index: -1;
-    background-color: var(--main-light-color);
-    animation: open-animation 0.3s ease-in-out forwards;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  z-index: -1;
+  background-color: var(--main-light-color);
+  animation: open-animation 0.3s ease-in-out forwards;
 }
 
 .dropdown-hidden {
-    display: none;
+  display: none;
 }
 
 .dropdown-menu-link {
-    padding: 1rem;
-    background-color: var(--main-light-color);
-    color: var(--main-dark-color);
-    text-decoration: none;
-    cursor: pointer;
-    border-bottom: 2px solid var(--main-dark-color);
-    text-align: center;
-   
+  padding: 1rem;
+  background-color: var(--main-light-color);
+  color: var(--main-dark-color);
+  text-decoration: none;
+  cursor: pointer;
+  border-bottom: 2px solid var(--main-dark-color);
+  text-align: center;
+
+  &:hover {
+    filter: brightness(90%);
+  }
 }
 
 @keyframes open-animation {
-    from {
-        opacity: 0;
-        transform: translateY(-80px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(-80px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 /* Make the dropdown menu small and on the right hand side for large screens */
 @media screen and (min-width: 460px) {
-    .dropdown-menu {
-        position: absolute;
-        top: 4rem;
-        right: 0;
-        max-width: 200px;
-        box-shadow: 1px 0 10px rgb(88, 88, 88);
-    }
-    
+  .dropdown-menu {
+    position: absolute;
+    top: 4rem;
+    right: 0;
+    max-width: 200px;
+    box-shadow: 1px 0 10px rgb(88, 88, 88);
+  }
 }
-
