--- a/src/components/filters/filters.css
+++ b/src/components/filters/filters.css
@@ -1,77 +1,78 @@
 /* CSS nesting - not supported in older browsers */
 .filters-container {
-    position: relative;
-    width: 100%;
-    max-width: 600px;
-    padding: 1rem;
-    color: var(--text-color);
-    background-color: var(--main-light-color);
-    box-shadow: 1px 0 10px rgb(88, 88, 88);
-    font-size: 0.8rem;
-    z-index: -1;
-    animation: open-animation 0.3s ease-in-out forwards;
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  padding: 1rem;
+  color: var(--text-color);
+  background-color: var(--main-light-color);
+  box-shadow: 1px 0 10px rgb(88, 88, 88);
+  font-size: 0.8rem;
+  z-index: -1;
+  animation: open-animation 0.3s ease-in-out forwards;
 
-    & h3 {
-        width: 100%;
-        text-align: center;
-        margin-bottom: 0.6rem;
-    }
+  & h3 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 0.6rem;
+  }
 }
 
 .filter-title {
-    font-size: 0.8rem;
-    font-weight: 500;
+  font-size: 0.8rem;
+  font-weight: 500;
 }
 
 .close {
-    position: absolute;
-    top: 12px;
-    right: 12px;
-    width: 1.1rem;
-    height: 1.1rem;
-    padding: 0.2rem;
-    border-radius: 50%;
-    color: var(--main-dark-color);
-    border: 1px solid var(--main-dark-color);
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 1.1rem;
+  height: 1.1rem;
+  padding: 0.2rem;
+  border-radius: 50%;
+  color: var(--main-dark-color);
+  border: 1px solid var(--main-dark-color);
+  cursor: pointer;
 }
 
 .filter {
-    display: flex;
-    align-items: center;
-    gap: 1rem
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .remove-icon {
-    width: 1rem;
-    height: 1rem;
-    padding: 0.2rem;
-    border: 1px solid rgb(79, 79, 79);
-    border-radius: 50%;
-    color: rgb(79, 79, 79);
+  width: 1rem;
+  height: 1rem;
+  padding: 0.2rem;
+  border: 1px solid rgb(79, 79, 79);
+  border-radius: 50%;
+  color: rgb(79, 79, 79);
 }
 
 .separator-line {
-    width: 100%;
-    border-bottom: 1px solid var(--main-dark-color);
-    margin: 1rem auto 1rem auto;
+  width: 100%;
+  border-bottom: 1px solid var(--main-dark-color);
+  margin: 1rem auto 1rem auto;
 }
 
 .filter-btn-container {
-    width: 95%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 1rem auto 0.5rem;
-    gap: 0.6rem
+  width: 95%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 1rem auto 0.5rem;
+  gap: 0.6rem;
 }
 
 @keyframes open-animation {
-    from {
-        opacity: 0;
-        transform: translateY(-80px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(-80px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
