--- a/src/Pages/favourites/favourites.css
+++ b/src/Pages/favourites/favourites.css
@@ -1,19 +1,8 @@
 .favourites-container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin: 5.5rem 0 0;
-}
-
-.favourites-container h2 {
-    margin-bottom: 0.5rem;
-}
-
-/* results has padding at the top so needs to be shifted up when used for favourites */
-.fav-results-container{
-    position: absolute;
-    top: -2rem
-
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 1.5rem;
 }
