--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -1,19 +1,15 @@
 .homepage {
-  --padding-for-navbar: 60px;
-
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: var(--padding-for-navbar);
 }
 
 .hero {
   position: relative;
   width: 100%;
   /* make this section fit the hieght of the screen - account for navbar */
-  min-height: calc(100vh - var(--padding-for-navbar));
-  /* height: 100vh; */
+  min-height: calc(100vh - var(--main-nav-height));
   display: flex;
   flex-direction: column;
   align-items: center;
