--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -1,84 +1,83 @@
 .login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 90%;
-    max-width: 600px;
-    margin: 4rem auto 0;
-    padding: 1.5rem 0;
-    border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  max-width: 600px;
+  margin: 1.5 auto;
+  border-radius: 10px;
 }
 
 .login-container h2 {
-    font-weight: 600;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .login-input-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 80%;
-    gap: 0.5rem;
-    /* more padding on top - space for label */
-    padding: 15px 10px 10px;
-    margin-bottom: 1rem;
-    border: 1px solid var(--main-dark-color);
-    border-radius: 10px; 
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 80%;
+  gap: 0.5rem;
+  /* more padding on top - space for label */
+  padding: 15px 10px 10px;
+  margin-bottom: 1rem;
+  border: 1px solid var(--main-dark-color);
+  border-radius: 10px;
 }
 
 .login-input-container input {
-    /* make sure the input area is the full length of the surrounding border */
-    min-width:90%;
-    border: none;
+  /* make sure the input area is the full length of the surrounding border */
+  min-width: 90%;
+  border: none;
 }
 
 .login-input-container label {
-    /* shift labels up so they sit over the input border */
-    position: absolute;
-    top: -12px;
-    left: 12px;
-    padding: 3px;
-    background-color: white;
-    color:  rgb(77, 77, 77);
-    font-size: 0.8rem;
-    }
+  /* shift labels up so they sit over the input border */
+  position: absolute;
+  top: -12px;
+  left: 12px;
+  padding: 3px;
+  background-color: white;
+  color: rgb(77, 77, 77);
+  font-size: 0.8rem;
+}
 
 .login-text-link {
-    color: var(--main-dark-color);
-    font-size: 0.8rem;
-    margin-bottom: 0.5rem;
-    font-weight: 500;
-    cursor: pointer;
+  color: var(--main-dark-color);
+  font-size: 0.8rem;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 .login-separator {
-    position: relative;
-    width: 90%;
-    margin: 2rem 0 1.5rem;
-    border-top: 1px solid var(--main-dark-color)
+  position: relative;
+  width: 90%;
+  margin: 2rem 0 1.5rem;
+  border-top: 1px solid var(--main-dark-color);
 }
 
 .login-separator span {
-    position: absolute;
-    top:-12px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 0 1rem;
-    background-color: white
+  position: absolute;
+  top: -12px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0 1rem;
+  background-color: white;
 }
 
 .login-input-icon {
-    stroke:  rgb(77, 77, 77);
-    color:  rgb(77, 77, 77);
-    height: 18px;
-    width: 18px;
+  stroke: rgb(77, 77, 77);
+  color: rgb(77, 77, 77);
+  height: 18px;
+  width: 18px;
 }
 
 .login-error {
-    color: red;
-    font-size: 0.8rem;
-    font-style: italic;
-    margin-bottom: 0.2rem;
+  color: red;
+  font-size: 0.8rem;
+  font-style: italic;
+  margin-bottom: 0.2rem;
 }
