--- a/src/Pages/my-stalls/my-stalls.css
+++ b/src/Pages/my-stalls/my-stalls.css
@@ -4,11 +4,11 @@
   align-items: center;
   width: 100%;
   max-width: 700px;
-  margin: 5.5rem auto 0;
+  margin: 1.5rem auto;
 }
 
 .my-stall-container h2 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .stall-update-container {
