--- a/src/Pages/stall-details-form/stall-details-form.css
+++ b/src/Pages/stall-details-form/stall-details-form.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 95%;
   max-width: 600px;
-  margin: 4rem auto 0;
+  margin: 0 auto;
   padding: 1.5rem 0;
   border-radius: 10px;
 }
