--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Podkova:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Podkova:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap");
 
 :root {
-  --main-dark-color: #00801C;
-  --main-light-color: #C2FFB2;
-  --text-color: rgb(29,29,29);
-  --modal-background-color:  rgba(63, 63, 63, 0.8);
-  font-family: 'Poppins', Verdana, sans-serif;
+  --main-dark-color: #00801c;
+  --main-light-color: #c2ffb2;
+  --text-color: rgb(29, 29, 29);
+  --modal-background-color: rgba(63, 63, 63, 0.8);
+  --main-nav-height: 4rem;
+  font-family: "Poppins", Verdana, sans-serif;
 }
 
 .color-dark {
@@ -39,4 +40,3 @@ input:focus {
 .hide {
   display: none;
 }
-
