--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -1,4 +1,4 @@
-.login-container {
+.login {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,12 +6,6 @@
   max-width: 600px;
   margin: 1.5rem auto;
   border-radius: 10px;
-}
-
-.login-container h2 {
-  font-weight: 600;
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
 }
 
 .login-input-container {
