--- a/src/Pages/my-stalls/my-stalls.css
+++ b/src/Pages/my-stalls/my-stalls.css
@@ -1,14 +1,10 @@
-.my-stall-container {
+.my-stalls {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   max-width: 700px;
   margin: 1.5rem auto;
-}
-
-.my-stall-container h2 {
-  margin-bottom: 1rem;
 }
 
 .stall-update-container {
