--- a/src/Pages/stall-details-form/stall-details-form.css
+++ b/src/Pages/stall-details-form/stall-details-form.css
@@ -2,17 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.5rem;
   width: 95%;
   max-width: 600px;
   margin: 0 auto;
   padding: 1.5rem 0;
-  border-radius: 10px;
-}
-
-.stall-details-form h2 {
-  font-weight: 600;
-  font-size: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 
 .stall-details-form p {
