--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -39,7 +39,7 @@
   gap: 0.5rem;
   width: 100%;
   padding: 1.5rem;
-  margin: 1.5rem;
+  margin-bottom: 1.5rem;
   border-radius: 15px;
   background-color: var(--main-light-color);
 }
@@ -48,6 +48,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 1.5rem;
 }
 
 .about-benefit-container {
@@ -58,7 +59,7 @@
   width: 80%;
   max-width: 500px;
   height: 250px;
-  margin: 1rem;
+  margin: 1rem 0;
   padding: 1rem 1.5rem;
   box-shadow: 0 0 10px rgb(195, 195, 195);
   border-radius: 20px;
