--- a/src/components/results-list/results-list.css
+++ b/src/components/results-list/results-list.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem 0;
 }
 
 .result-container {
@@ -63,7 +62,7 @@
 /* On screens larger than 750px change card style */
 @media screen and (min-width: 750px) {
   .results-list {
-    padding: 1rem 2rem;
+    padding: 0 2rem;
     flex-direction: row;
     justify-content: center;
     gap: 2rem;
