--- a/src/components/welcome-modal/welcome-modal.css
+++ b/src/components/welcome-modal/welcome-modal.css
@@ -1,60 +1,18 @@
-.welcome-modal-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--modal-background-color);
-  z-index: 10000;
+.welcome-modal-title {
+  margin-bottom: 0.5rem;
+  color: var(--main-dark-color);
+  text-align: center;
+  font-size: 2rem;
+  font-family: Podkova, Arial, Helvetica, sans-serif;
+  line-height: 1.1;
 }
 
-/* CSS nesting - not supported in older browsers */
-.welcome-modal-content {
-  width: 85%;
-  max-width: 1000px;
-  display: flex;
-  flex-direction: column;
-  padding: 2.5rem;
-  background-color: white;
-  border-radius: 1rem;
-
-  & h3 {
-    margin-bottom: 0.5rem;
-    color: var(--main-dark-color);
-    text-align: center;
-    font-size: 2rem;
-    font-family: Podkova, Arial, Helvetica, sans-serif;
-    line-height: 1.1;
-  }
-
-  & h5 {
-    margin: 0 auto 1rem;
-    font-size: 1.2rem;
-    color: var(--main-dark-color);
-    font-style: italic;
-    font-weight: 300;
-  }
-
-  & p,
-  ul {
-    font-size: 0.8rem;
-    margin-bottom: 1rem;
-  }
-
-  & li {
-    /* line up bullets with text above */
-    list-style-position: inside;
-    /* line up second line of text with the first for each bullet */
-    text-indent: -1.5em;
-    padding-left: 1.5em;
-  }
-
-  & .bold {
-    font-weight: bold;
-  }
+.welcome-modal-subtitle {
+  margin: 0 auto 1rem;
+  font-size: 1.2rem;
+  color: var(--main-dark-color);
+  font-style: italic;
+  font-weight: 300;
 }
 
 .welcome-btn-container {
