--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -8,7 +8,7 @@
 .hero {
   position: relative;
   width: 100%;
-  /* make this section fit the hieght of the screen - account for navbar */
+  /* Make this section fit the hieght of the screen - account for navbar */
   min-height: calc(100vh - var(--main-nav-height));
   display: flex;
   flex-direction: column;
@@ -19,11 +19,11 @@
   background-repeat: no-repeat;
   background-position: center center;
   box-shadow: 0 0 10px black;
-  /* set z-index so tranparent layer can be added over top */
+  /* Set z-index so tranparent layer can be added over top */
   z-index: 1;
 }
 
-/* transparent element to darken background image */
+/* Transparent element to darken background image */
 .hero::before {
   content: "";
   position: absolute;
@@ -31,7 +31,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
   z-index: -1;
 }
 
@@ -50,7 +50,7 @@
 
   & p {
     margin-top: 0.5rem;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-style: italic;
     font-weight: 400;
     text-align: center;
@@ -61,7 +61,7 @@
 .home-search-input {
   width: 250px;
   height: 30px;
-  margin: 2rem 0 1rem;
+  margin: 2rem 0;
   padding: 1.1rem;
   background-color: white;
   border-radius: 10px;
@@ -79,14 +79,13 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  margin: 1rem auto;
   padding: 0.4rem 1.5rem 0.4rem 2rem;
+  background-color: var(--main-dark-color);
   color: white;
   font-size: 0.8rem;
-  background-color: var(--main-dark-color);
   border: none;
   border-radius: 10px;
-  box-shadow: rgb(171, 171, 171) 0 0 4px;
+  box-shadow: 0 0 5px rgb(171, 171, 171);
   cursor: pointer;
   /* remove styling added from Link component */
   text-decoration: none;
@@ -106,16 +105,14 @@
     background-image: url("../../assets/home-background-wide.jpg");
   }
 
-  /* use before pseudo element to darken background image */
+  /* Use before pseudo element to darken background image */
   .hero::before {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.7);
   }
 
   .home-main-text {
-    margin-top: 2rem;
-
     & h2 {
-      font-size: 2rem;
+      font-size: 2.2rem;
     }
 
     & p {
@@ -126,7 +123,7 @@
   .home-search-input {
     width: 350px;
     height: 40px;
-    margin: 3rem 0 1rem;
+    margin: 3rem 0 2rem;
     font-size: 0.8rem;
   }
 
