--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -4,11 +4,10 @@
   align-items: center;
   width: 100%;
   max-width: 1000px;
-  padding: 0 1.5rem 2rem;
+  padding: 0 1.5rem 1rem;
 
   & h2 {
-    width: fit-content;
-    margin: 0 auto 0.5rem;
+    margin-bottom: 0.5rem;
     font-family: Podkova, Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 1.8rem;
@@ -79,19 +78,19 @@
 .about-image {
   height: 100%;
 
+  /* Make heart image a bit smaller than the others */
   &#heart-vegetable-image {
     padding: 1rem;
   }
 }
 
 .about-btn-container {
-  margin: 1rem auto 0.5rem;
+  margin: 1rem auto 0;
 }
 
 .about-stall-image {
   width: 300px;
   height: auto;
-  margin-top: 2rem;
 }
 
 @media screen and (min-width: 800px) {
@@ -104,16 +103,15 @@
     & h3 {
       font-size: 1.5rem;
       font-weight: 600;
-      text-align: center;
     }
   }
 
   .about-section-container {
     margin: 3rem;
     padding: 2rem;
+
     & p {
       font-size: 1rem;
-      width: 100%;
     }
   }
 
@@ -129,14 +127,8 @@
   }
 
   .about-image-container {
-    display: flex;
-    justify-content: center;
     height: 60%;
     width: 100%;
-  }
-
-  .about-image {
-    height: 100%;
   }
 
   .about-stall-image {
