--- a/src/components/dropdown-menu/dropdown-menu.css
+++ b/src/components/dropdown-menu/dropdown-menu.css
@@ -3,9 +3,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  /* Low z-index so the dropdown animates in from behind navbar */
   z-index: -1;
-  background-color: var(--main-light-color);
-  animation: open-animation 0.3s ease-in-out;
+  animation: open-dropdown 0.4s ease-in-out;
 }
 
 .dropdown-menu-link {
@@ -13,16 +13,15 @@
   background-color: var(--main-light-color);
   color: var(--main-dark-color);
   text-decoration: none;
-  cursor: pointer;
-  border-bottom: 2px solid var(--main-dark-color);
   text-align: center;
-
+  border-bottom: 2px solid var(--main-dark-color);
+  cursor: pointer;
   &:hover {
     filter: brightness(90%);
   }
 }
 
-@keyframes open-animation {
+@keyframes open-dropdown {
   from {
     opacity: 0;
     transform: translateY(-80px);
@@ -37,9 +36,9 @@
 @media screen and (min-width: 460px) {
   .dropdown-menu {
     position: absolute;
-    top: 4rem;
+    top: var(--main-nav-hieght);
     right: 0;
     max-width: 200px;
-    box-shadow: 1px 0 10px rgb(88, 88, 88);
+    box-shadow: 0px 0 10px rgb(88, 88, 88);
   }
 }
