--- a/src/components/section-heading/section-heading.css
+++ b/src/components/section-heading/section-heading.css
@@ -1,12 +1,11 @@
 .section-heading {
-  /* use width and margin to center h2 */
+  /* Use width and margin to center h2 */
   width: fit-content;
   margin: 0 auto 1.5rem;
-  /* use padding and border for underline */
+  /* Use padding and border for underline */
   padding: 0 1rem 0.2rem;
   border-bottom: 1px solid var(--main-dark-color);
-  font-family: Podkova, Arial, Helvetica, sans-serif;
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 1.6rem;
 }
